...
  }

  List<Widget> _buildRoleSpecificCards(BuildContext context) {
    switch (_currentRole) {
      case 'doctor':
        return [
          _buildHomeCard(context, 'לוח בקרה', 'ניהול תורים ומטופלים',
              Icons.dashboard, Colors.green, '/doctor-dashboard'),
          _buildHomeCard(
              context,
              'ניהול תורים',
              'אשר, דחה ונהל תורים',
              Icons.calendar_today,
              Colors.green.shade700,
              '/booking-management'),
          _buildHomeCard(context, 'יצירת מטופל', 'הוסף מטופל חדש',
              Icons.person_add, Colors.green.shade600, '/create-patient'),
          _buildHomeCard(context, 'הפרופיל שלי', 'פרטים אישיים וחשבון בנק',
              Icons.account_circle, Colors.green.shade500, '/doctor-profile'),
          _buildHomeCard(
              context,
              'הגדרות טיפולים',
...
